samples/_failures_safe/1761662410_aa5842_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18fff043.c: In function ‘main’:
./samples/SAFE/__tmp_18fff043.c:150:5: error: expected declaration or statement at end of input
  150 |     if (analyzer.word_count == 0) {
      |     ^~
./samples/SAFE/__tmp_18fff043.c:150:5: error: expected declaration or statement at end of input
